--- a/TestDrivenArchitecture/Resources/Localizable.strings
+++ b/TestDrivenArchitecture/Resources/Localizable.strings
@@ -6,4 +6,5 @@
   Copyright © 2020 weijie. All rights reserved.
 */
 
-"welcome_home" = "Welcome Home";
+"email_or_password_cannot_be_empty" = "Email or password cannot be empty.";
+"email_or_password_is_incorrect" = "Email or password is incorrect.";
