Completed Sign Up.

--- a/TestDrivenArchitecture/Resources/Localizable.strings
+++ b/TestDrivenArchitecture/Resources/Localizable.strings
@@ -6,5 +6,7 @@
   Copyright © 2020 weijie. All rights reserved.
 */
 
+"all_the_textfields_with_connot_be_empty" = "All the textfields with * cannot be empty.";
 "email_or_password_cannot_be_empty" = "Email or password cannot be empty.";
 "email_or_password_is_incorrect" = "Email or password is incorrect.";
+"password_and_confirmed_password_are_different" = "Password and confirmed password are different.";
